2007-06-16  Claude Paroz  <claude@2xlibre.net>

	* l10n.py: Fixed language detection with country codes. Patch by
	Dimitris Glezos <dimitris@glezos.com>. Fixes bug #447741.

2007-06-12  Claude Paroz  <claude@2xlibre.net>

	* translation-teams.xml.in: Updated Lithuanian Web page.

2007-06-07  Claude Paroz  <claude@2xlibre.net>

	* translation-teams.xml.in: Comment out default mailing-list key, so it
	doesn't show up when none is defined.

2007-06-07  Claude Paroz  <claude@2xlibre.net>

	* people.xml.in:
	* translation-teams.xml.in: Add Wolof Team.

2007-06-07  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: deskbar-applet branched for 2.18.

2007-05-26  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: gtksourceview branched for 2.18.

2007-05-19  Claude Paroz  <claude@2xlibre.net>

	* teams.py: Don't pass utf-8 string to gettext.

2007-05-19  Claude Paroz  <claude@2xlibre.net>

	* l10n.py: Add encoding parameter to unicode function.
	* po: Add svn:ignore property.
	* templates/index.tmpl:
	* templates/language-release.tmpl:
	* templates/list-languages.tmpl:
	* templates/list-modules.tmpl:
	* templates/list-releases.tmpl:
	* templates/list-teams.tmpl:
	* templates/module.tmpl:
	* templates/people.tmpl:
	* templates/person.tmpl:
	* templates/release.tmpl:
	* templates/team.tmpl: Remove BOM from text files. Move http-equiv
	before title tag.

2007-05-19  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Branch gtk-engines (gtk-engines-2-10).

2007-05-17  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Add new module gnome-subtitles in Extras.

2007-05-15  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Add new module banter in Extras.
	Add gstreamer modules in freedesktop.

2007-05-14  Claude Paroz  <claude@2xlibre.net>

	* templates/language-release-ui-stats-modules.tmpl: Remove unnecessary