@@ -1,5 +1,10 @@
 2007-06-16  Claude Paroz  <claude@2xlibre.net>
 
+	* view-module.py: Add timezone info for updated time of po and pot
+	files. Fixes bug #122870.
+
+2007-06-16  Claude Paroz  <claude@2xlibre.net>
+
 	* l10n.py: Fixed language detection with country codes. Patch by
 	Dimitris Glezos <dimitris@glezos.com>. Fixes bug #447741.
 
